Fix `z-index` of `:focus` on disabled grouped buttons.

--- a/packages/itwinui-css/src/button/button-group.scss
+++ b/packages/itwinui-css/src/button/button-group.scss
@@ -41,13 +41,16 @@
         z-index: 1;
       }
 
-      &:focus,
-      &:focus-within {
-        z-index: 2;
-      }
-
       #{$disabledSelector} {
         z-index: -1;
+      }
+
+      &:focus,
+      &:focus-within {
+        &,
+        &:where([aria-disabled='true']) {
+          z-index: 2;
+        }
       }
     }
 
